--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# IntelliJ IDEA
+*.iml
+.idea/
+
 # Package Files #
 *.jar
 *.war
@@ -21,3 +25,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# advent of code puzzle
+ inputs
+*.txt
